kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laracon2019
  labels:
    app.kubernetes.io/name: laracon2019
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: laracon2019
